# VisualServoing

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/aruco_detect/: DetectorParamsConfig.h
devel/include/custom_pkg/: floatList.h
devel/include/fiducial_msgs/: Fiducial.h  FiducialArray.h  FiducialMapEntry.h  FiducialMapEntryArray.h  FiducialTransform.h  FiducialTransformArray.h  InitializeMap.h  InitializeMapRequest.h  InitializeMapResponse.h
devel/include/fiducial_slam/: AddFiducial.h  AddFiducialRequest.h  AddFiducialResponse.h
devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteLightRequest.h  DeleteLightResponse.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLightPropertiesRequest.h  LinkState.h  (+39 more)
src/aruco_detect/: CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
src/custom_pkg/: CMakeLists.txt  myWorld.sdf  my_aruco_detect.launch  my_launch.launch  package.xml  starter.launch
src/custom_pkg/msg/: floatList.msg
src/custom_pkg/src/: follow_object.py  ibvs.py  jump.py  my_move_group_interface.cpp  pbvs.py  rectangle.py  start_position.py  topic_logger.py  ursim_gazebo.py
src/fiducial_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/fiducial_slam/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/fiducials/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+445 files in other folders)
